# Plan-T

./: Cargo.toml
src/: main.rs  nodes.rs  primes.rs  scene.rs
src/app/: mod.rs  mouse.rs  setup.rs  update.rs
