[package]
name = "big_bang"
version = "0.1.0"
authors = ["Pawel Rynowiecki <pawel.rynowiecki@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.2.3"
itertools = "0.9.0"

bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "master" }
