[package]
name = "plan-t"
version = "0.1.0"
authors = ["Pawel Rynowiecki <pawel.rynowiecki@anixe.pl>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.2.3"
itertools = "0.9.0"
bevy = "0.6.0"

[dev-dependencies]
test-case = "1.0.0"

[profile.dev.package."*"]
opt-level = 3
